gramatica_corrigida.txt
PROGRAMA →
	program id;
	DECLARAÇÕES_VARIÁVEIS
	DECLARAÇÕES_DE_SUBPROGRAMAS
	COMANDO_COMPOSTO
	.


DECLARAÇÕES_VARIÁVEIS →
	var LISTA_DECLARAÇÕES_VARIÁVEIS
	| ε


LISTA_DECLARAÇÕES_VARIÁVEIS →
	LISTA_DE_IDENTIFICADORES: TIPO; LISTA_DECLARAÇÕES_VARIÁVEIS_2


LISTA_DECLARAÇÕES_VARIÁVEIS_2 : {
	LISTA_DE_IDENTIFICADORES: TIPO; LISTA_DECLARAÇÕES_VARIÁVEIS_2
	| ε

}

LISTA_DE_IDENTIFICADORES →
	id LISTA_DE_IDENTIFICADORES_2

LISTA_DE_IDENTIFICADORES_2 →
	, id LISTA_DE_IDENTIFICADORES_2
	| ε
	

TIPO →
	integer
	| real
	| boolean


DECLARAÇÕES_DE_SUBPROGRAMAS →
	| DECLARAÇÕES_DE_SUBPROGRAMAS_2

DECLARAÇÕES_DE_SUBPROGRAMAS_2 →
	DECLARAÇÃO_DE_SUBPROGRAMA; DECLARAÇÕES_DE_SUBPROGRAMAS_2
	| ε


DECLARAÇÃO_DE_SUBPROGRAMA →
	procedure id ARGUMENTOS;
	DECLARAÇÕES_VARIÁVEIS
	DECLARAÇÕES_DE_SUBPROGRAMAS
	COMANDO_COMPOSTO


ARGUMENTOS →
	(LISTA_DE_PARAMETROS)
	| ε


LISTA_DE_PARAMETROS →
	LISTA_DE_IDENTIFICADORES: TIPO
	| LISTA_DE_PARAMETROS; LISTA_DE_IDENTIFICADORES: TIPO


COMANDO_COMPOSTO →
	begin
	COMANDOS_OPCIONAIS
	end


COMANDOS_OPCIONAIS →
	LISTA_DE_COMANDOS
	| ε


LISTA_DE_COMANDOS →
	COMANDO LISTA_DE_COMANDOS_2

LISTA_DE_COMANDOS_2 : {
	; COMANDO LISTA_DE_COMANDOS_2
	| ε
}


COMANDO →
	VARIÁVEL := EXPRESSÃO
	| ATIVAÇÃO_DE_PROCEDIMENTO
	| COMANDO_COMPOSTO
	| if EXPRESSÃO then COMANDO PARTE_ELSE
	| while EXPRESSÃO do COMANDO


PARTE_ELSE →
	else COMANDO
	| ε


VARIÁVEL →
	id


ATIVAÇÃO_DE_PROCEDIMENTO →
	id ATIVAÇÃO_DE_PROCEDIMENTO_DESAMBIGUIDADE

ATIVAÇÃO_DE_PROCEDIMENTO_DESAMBIGUIDADE :{
	(LISTA_DE_EXPRESSÕES)
	| ε
}


LISTA_DE_EXPRESSÕES →
	EXPRESSÃO LISTA_DE_EXPRESSÕES_2

LISTA_DE_EXPRESSÕES_2 :{
	, EXPRESSÃO LISTA_DE_EXPRESSÕES_2
	| ε
}


EXPRESSÃO →
	EXPRESSÃO_SIMPLES EXPRESSAO_DESAMBIGUIDADE

EXPRESSAO_DESAMBIGUIDADE: {
	e
	| OP_RELACIONAL EXPRESSÃO_SIMPLES
}

EXPRESSÃO_SIMPLES →
	TERMO EXPRESSÃO_SIMPLES_2
	| SINAL TERMO EXPRESSÃO_SIMPLES_2

EXPRESSÃO_SIMPLES_2 : {
	OP_ADITIVO TERMO EXPRESSÃO_SIMPLES_2
	| ε
}


TERMO →
	FATOR TERMO_2

TERMO_2 :{
	OP_MULTIPLICATIVO FATOR
	| ε
}


FATOR →
	id
	| id(LISTA_DE_EXPRESSÕES)
	| NUM_INT
	| NUM_REAL
	| true
	| false
	| (EXPRESSÃO)
	| not FATOR


SINAL →
	+ 
	| -


OP_RELACIONAL →
	=
	| <
	| >
	| <=
	| >=
	| <>


OP_ADITIVO →
	+
	| -
	| or


OP_MULTIPLICATIVO →
	*
	| /
	| and
